...
    <string name="religion">Tôn giáo</string>
    <string name="religion_suggestion">Bạn theo tôn giáo nào</string>
    <string name="life_style_suggestion">Bạn hãy đưa ra quan điểm sống</string>
    <string name="hobbies_suggestion">Bạn làm gì khi rảnh</string>
    <string name="bio_suggestion">Bạn hãy giới thiệu về mình</string>

    <string name="name">Tên</string>
    <string name="gender">Giới tính</string>
    <string name="birthday">Ngày sinh</string>
    <string name="phone">Số điện thoại</string>
    <string name="just_dating">Hẹn hò thôi</string>
    <string name="language">Ngôn ngữ</string>
    <string name="app_slogan">Humble ghép đôi - Tình yêu tới thôi</string>

    <string name="support_text">Chúng tôi luôn ở đây để hỗ trợ bạn</string>
    <string name="display">Hiển thị</string>
...
