...
        "Quảng Bình", "Quảng Nam", "Quảng Ngãi", "Quảng Ninh", "Quảng Trị",
        "Sóc Trăng", "Sơn La", "Tây Ninh", "Thái Bình", "Thái Nguyên",
        "Thanh Hóa", "Thừa Thiên – Huế", "Tiền Giang", "Trà Vinh", "Tuyên Quang",
        "Vĩnh Long", "Vĩnh Phúc", "Yên Bái", "Khác"
    )
    val gender =  listOf(
        "Nam",
        "Nữ",
        "Khác"
    )

    //hobbies
    val healthy = listOf(
...
    val intellectual = listOf(
        "Đọc sách", "Viết lách", "Học ngoại ngữ", "Nghiên cứu khoa học",
        "Chơi cờ / giải đố", "Nghe Podcast", "Lịch sử / Văn hóa",
        "Công nghệ / Lập trình"
    )
    val joy = listOf(
        "Nghe nhạc", "Xem phim / Netflix", "Du lịch", "Chụp ảnh",
        "Vẽ / Thiết kế", "Chơi game", "Cà phê tám chuyện",
        "Sưu tầm", "Nấu ăn", "Nhảy nhót / Karaoke"
    )
    val unique = listOf(
        "Cosplay", "Mê xe", "Đồ điện tử", "Sống ảo",
        "Tarot / Tử vi", "Content Creator"
...
