...
                onRemoveClick = { index -> images = images.toMutableList().apply { removeAt(index) } }
            )


        }
        Column(){
            RedLinearBorderButton("Hoàn thành",{ navController.navigate("home") })

        }

    }

}
